--- a/index.html
+++ b/index.html
@@ -379,10 +379,10 @@
         </div>
         <div class="row row4 row5 ">
             <div class="col-3">
-                <div class="ghazal imgs">
+                <div class="Taylor1 imgs">
                     <div class="overly">
                         <div class="detailes">
-                            <h1 class="name">Ghazal</h1>
+                            <h1 class="name">Taylor</h1>
                             <span class="major">Software Engineer</span>
                             <div class="teamicons">
                                 <a class="iconoverly" href="#"> <i class="fa-brands fa-instagram icon1"></i></a>
@@ -394,10 +394,10 @@
                 </div>
             </div>
             <div class="col-3">
-                <div class="ali imgs">
+                <div class="Taylor2 imgs">
                     <div class="overly">
                         <div class="detailes">
-                            <h1 class="name">Ali</h1>
+                            <h1 class="name">Taylor</h1>
                             <span class="major">Software Engineer</span>
                             <div class="teamicons">
                                 <a class="iconoverly" href="#"> <i class="fa-brands fa-instagram icon1"></i></a>
@@ -409,10 +409,10 @@
                 </div>
             </div>
             <div class="col-3">
-                <div class="negar imgs">
+                <div class="Taylor3 imgs">
                     <div class="overly">
                         <div class="detailes">
-                            <h1 class="name">Negar</h1>
+                            <h1 class="name">Taylor</h1>
                             <span class="major">Software Engineer</span>
                             <div class="teamicons">
                                 <a class="iconoverly" href="#"> <i class="fa-brands fa-instagram icon1"></i></a>
@@ -424,10 +424,10 @@
                 </div>
             </div>
             <div class="col-3">
-                <div class="nima imgs">
+                <div class="Taylor4 imgs">
                     <div class="overly">
                         <div class="detailes">
-                            <h1 class="name">Nima</h1>
+                            <h1 class="name">Taylor</h1>
                             <span class="major">Software Engineer</span>
                             <div class="teamicons">
                                 <a class="iconoverly" href="#"> <i class="fa-brands fa-instagram icon1"></i></a>
